--- a/css/tooplate-wave-cafe.css
+++ b/css/tooplate-wave-cafe.css
@@ -1,5 +1,10 @@
 html { scroll-behavior: smooth; }
 
+.site-vid {
+    width: 100%;
+    max-height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
